language/move-lang/tests/move_check/borrows/move_from_invalid.exp
error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:12:23 ───
    │
 12 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 11 │         let r1 = borrow_global_mut<R>(addr);
    │                  -------------------------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:18:23 ───
    │
 18 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 17 │         let f_ref = &mut borrow_global_mut<R>(addr).f;
    │                     --------------------------------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:24:23 ───
    │
 24 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 23 │         let r1 = id_mut(borrow_global_mut<R>(addr));
    │                  ---------------------------------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:30:23 ───
    │
 30 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 29 │         let f_ref = id_mut(&mut borrow_global_mut<R>(addr).f);
    │                     ----------------------------------------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:36:23 ───
    │
 36 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 35 │         let r1 = borrow_global<R>(addr);
    │                  ---------------------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:42:23 ───
    │
 42 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 41 │         let f_ref = &borrow_global<R>(addr).f;
    │                     ------------------------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:48:23 ───
    │
 48 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 47 │         let r1 = id(borrow_global<R>(addr));
    │                  -------------------------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:54:23 ───
    │
 54 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 53 │         let f_ref = id(&borrow_global<R>(addr).f);
    │                     ----------------------------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_from_invalid.move:62:23 ───
    │
 62 │         let R { f } = move_from<R>(addr);
    │                       ^^^^^^^^^^^^^^^^^^ Invalid extraction of resource 'R'
    ·
 61 │         let r1; if (cond) r1 = borrow_global_mut<R>(addr) else r1 = &mut r;
    │                                -------------------------- It is still being mutably borrowed by this reference
    │

